<resources>
    <string name="app_name">LineMemo</string>
    <string name="delete">제거</string>
    <string name="deleteAll">전체 제거</string>
    <string name="add">추가</string>
    <string name="save">저장</string>
    <string name="imageAdd">이미지 추가</string>
    <string name="imageDelete">이미지 제거</string>
    <string name="date">날짜</string>
    <string name="content">내용</string>
    <string name="search">검색</string>
    <string name="editHint">글을 작성해주세요</string>
    <string name="URLHint">URL를 적어주세요</string>
    <string name="back">뒤로가기</string>
    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>
    <string name="URL">URL</string>
    <string name="title">제목</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>
